// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppList should disable buttons and display "Installing..." button text while installing an app 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="py-1 row no-gutters"
          >
            <div
              class="d-flex align-items-start my-2 mr-3 col-auto"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="/path/to/uninstalled/icon.png"
                />
              </div>
            </div>
            <div
              class="col"
            >
              <div
                class="h8"
              >
                Uninstalled Uninstalled Test App
              </div>
              <div
                class="small text-muted"
              >
                The uninstalled uninstalled test app
              </div>
              <div
                class="small text-muted-more"
              >
                official
                , v
                7.8.9
              </div>
            </div>
            <div
              class="d-flex align-items-center my-3 pl-3 ml-auto col-auto"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-secondary"
                  disabled=""
                  title="Install Uninstalled Uninstalled Test App"
                  type="button"
                >
                  Installing...
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-secondary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should disable buttons and display "Updating..." while updating an app 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="py-1 row no-gutters"
          >
            <div
              class="d-flex align-items-start my-2 mr-3 col-auto"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="/path/to/updatable/icon.png"
                />
              </div>
            </div>
            <div
              class="col"
            >
              <div
                class="h8"
              >
                Downloadable Updatable Test App
              </div>
              <div
                class="small text-muted"
              >
                The downloadable updatable test app
              </div>
              <div
                class="small text-muted-more"
              >
                official
                , v
                1.2.3
                 (v
                1.2.4
                 available)
              </div>
            </div>
            <div
              class="d-flex align-items-center my-3 pl-3 ml-auto col-auto"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-primary"
                  disabled=""
                  title="Update Downloadable Updatable Test App"
                  type="button"
                >
                  Updating...
                </button>
                <button
                  class="btn btn-primary"
                  disabled=""
                  title="Open Downloadable Updatable Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should disable buttons while removing an app 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="py-1 row no-gutters"
          >
            <div
              class="d-flex align-items-start my-2 mr-3 col-auto"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="/path/to/installed/icon.png"
                />
              </div>
            </div>
            <div
              class="col"
            >
              <div
                class="h8"
              >
                Downloadable Installed Test App
              </div>
              <div
                class="small text-muted"
              >
                The downloadable installed test app
              </div>
              <div
                class="small text-muted-more"
              >
                official
                , v
                4.5.6
              </div>
            </div>
            <div
              class="d-flex align-items-center my-3 pl-3 ml-auto col-auto"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-primary"
                  disabled=""
                  title="Open Downloadable Installed Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should render local, not-installed, installed, and updatable apps 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="py-1 row no-gutters"
          >
            <div
              class="d-flex align-items-start my-2 mr-3 col-auto"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="/path/to/installed/icon.png"
                />
              </div>
            </div>
            <div
              class="col"
            >
              <div
                class="h8"
              >
                Downloadable Installed Test App
              </div>
              <div
                class="small text-muted"
              >
                The downloadable installed test app
              </div>
              <div
                class="small text-muted-more"
              >
                official
                , v
                4.5.6
              </div>
            </div>
            <div
              class="d-flex align-items-center my-3 pl-3 ml-auto col-auto"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-primary"
                  title="Open Downloadable Installed Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="list-group-item"
        >
          <div
            class="py-1 row no-gutters"
          >
            <div
              class="d-flex align-items-start my-2 mr-3 col-auto"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="/path/to/updatable/icon.png"
                />
              </div>
            </div>
            <div
              class="col"
            >
              <div
                class="h8"
              >
                Downloadable Updatable Test App
              </div>
              <div
                class="small text-muted"
              >
                The downloadable updatable test app
              </div>
              <div
                class="small text-muted-more"
              >
                official
                , v
                1.2.3
                 (v
                1.2.4
                 available)
              </div>
            </div>
            <div
              class="d-flex align-items-center my-3 pl-3 ml-auto col-auto"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-primary"
                  title="Update Downloadable Updatable Test App"
                  type="button"
                >
                  Update
                </button>
                <button
                  class="btn btn-primary"
                  title="Open Downloadable Updatable Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="list-group-item"
        >
          <div
            class="py-1 row no-gutters"
          >
            <div
              class="d-flex align-items-start my-2 mr-3 col-auto"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="/path/to/dummy/icon.png"
                />
              </div>
            </div>
            <div
              class="col"
            >
              <div
                class="h8"
              >
                Local Dummy Test App
              </div>
              <div
                class="small text-muted"
              >
                The local dummy test app
              </div>
              <div
                class="small text-muted-more"
              >
                local
                , v
                1.2.3
              </div>
            </div>
            <div
              class="d-flex align-items-center my-3 pl-3 ml-auto col-auto"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-primary"
                  title="Open Local Dummy Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="list-group-item"
        >
          <div
            class="py-1 row no-gutters"
          >
            <div
              class="d-flex align-items-start my-2 mr-3 col-auto"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="/path/to/uninstalled/icon.png"
                />
              </div>
            </div>
            <div
              class="col"
            >
              <div
                class="h8"
              >
                Uninstalled Uninstalled Test App
              </div>
              <div
                class="small text-muted"
              >
                The uninstalled uninstalled test app
              </div>
              <div
                class="small text-muted-more"
              >
                official
                , v
                7.8.9
              </div>
            </div>
            <div
              class="d-flex align-items-center my-3 pl-3 ml-auto col-auto"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-secondary"
                  title="Install Uninstalled Uninstalled Test App"
                  type="button"
                >
                  Install
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-secondary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should render without any apps 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      />
    </div>
    <div />
  </div>
</body>
`;
